--- a/lib-docs/jade/docs/3.x/creating-extensions/index.jade
+++ b/lib-docs/jade/docs/3.x/creating-extensions/index.jade
@@ -67,13 +67,13 @@ block documents
       :markdown
         <span>
 
-            $(myextensions) sudo npm install -g gulp && npm install . && bundle
+            $(myextensions) sudo npm install -g gulp && npm install . && bundle && make
 
   .document
     article.article
       :markdown
-        If everything worked correctly, you should be able to run the `gulp` command. This
-          will automatically launch a browser with a basic sample webpage.
+        If everything worked correctly, you should be able to launch the project with the  `gulp` 
+          command. This will automatically launch a browser with a basic sample webpage.
 
         If you'd like to save your project environment on github, you can remove the existing
           `origin` remote from `.git/config` and add your own (Using the instructions provided 
