Clarified submodule creation for extensions. Need to do the same for themes.

--- a/lib-docs/jade/docs/3.x/creating-extensions/index.jade
+++ b/lib-docs/jade/docs/3.x/creating-extensions/index.jade
@@ -126,7 +126,7 @@ block documents
         Now that you have your `status-text` repo, you'll need to add it as a submodule
         in your project.
 
-        <span class="notice">Don't clone!</p> It's tempting to just `git clone` your repo, here,
+        <span class="notice">Don't clone!</span> It's tempting to just `git clone` your repo, here,
         but you won't be able to maintain it as easily from within your project.
 
         You should then see this directory created alongside the `switch` extension.
