Adding documentation for creating themes.

--- a/lib-docs/jade/docs/3.x/creating-extensions/index.jade
+++ b/lib-docs/jade/docs/3.x/creating-extensions/index.jade
@@ -120,6 +120,11 @@ block documents
         Create a new repo in GitHub and initiate with a README.md file. In this example,
         we'll say we created a repo called "status-text"
 
+        <span class="notice">Beware of extensionless files</span> Please
+        avoid using files that do not have extensions. For example, `LICENSE`
+        should be renamed to `LICENSE.md`. Extensionless files create issues 
+        in your Rails end users
+
   .document
     article.article
       :markdown
@@ -254,26 +259,25 @@ block documents
         For **themes**, look in `lib/sass/themes/`. There you'll see a directory called "default"
           and a sass file called theme.sass.
 
-        If you look at theme.sass, you'll notice the content is unremarkable. To reduce
-          code duplication, we've just routed it to the default theme from kickstart-core.
+        We'll need to create a structure similar to `default`. First, we'll need to create
+        an empty repository on GitHub so we can create a submodule from it.
 
-        To create your theme, you'll want to have a directory with your theme's name
-        next to the "default" directory. In that directory you'll also want a `theme.sass`
-        file.
+        Create a repository with the name of your theme, including a README.md file, and add 
+        it as a submodule to your lib/sass/themes directory.
 
-        But to do this, we should really start out with the default theme and evolve it into
-        something new. Let's copy the default theme from the core and add it to your theme
-        directory in lib.
+        Then copy in the default theme from the core directory. This will be the sass file
+        that will become your theme.
 
     article.code
       :markdown
         <span>
 
-            # In this example, our theme will be called "Dark"
-            $(myextensions) mkdir lib/sass/themes/dark
+            # Add the repo as a submodule.
+            $(themes) git submodule add git@github.com:mygithubaccount/mytheme.git
 
             # Copy the core theme into "dark"
-            $(myextensions) cp lib-core/sass/themes/default/theme.sass lib/sass/themes/dark/
+            $(themes) cd ../../../
+            $(myextensions) cp lib-core/sass/themes/default/theme.sass lib/sass/themes/mytheme/
 
   .document
     article.article
@@ -301,33 +305,24 @@ block documents
   .document
     article.article
       :markdown
-        ## Save extension on GitHub
+        #### Test your theme with the docs
 
-        Now let's save this extension as its own standalone GitHub repo.
-        This will allow users to install it as a submodule without getting
-        any of the code above the directory where your extension lives.
+        Better, just use the docs! This will allow you to test your theme with all
+        the core components.
 
-        A great way to do this is to simply create a new repo on GitHub 
-        without a license or readme, and follow the "Push an existing repository"
-        instructions.
+        Instead of `gulp`, run `gulp watch:docs`. This will compile all the files
+        in `lib-docs` instead of `lib`.
 
-        <span class="notice">Beware of extensionless files</span> Please
-        avoid using files that do not have extensions. For example, `LICENSE`
-        should be renamed to `LICENSE.md`
+        Because there are several places you'd need to change the theme (The docs use
+        a long list of css files.) the chosen theme can be changed in all files from
+        `lib-docs/sass/chosen-theme.sass`.
 
-        Extensionless files create issues in your Rails end users
+        If you want to run both the `lib` and `lib-docs` directories, no problem.
+          Gulp will automatically use different ports for each.
 
     article.code
       :markdown
         <span>
 
-            $(status-text) git init
-            $(status-text) git add -A .
-            $(status-text) git commit -am "Starting my new extension"
-            # Now you can push this up to Github.
-
-            $(dark) git init
-            $(dark) git add -A .
-            $(dark) git commit -am "Starting new theme"
-            # Now you can push this up to Github.
-
+            // In lib-docs/sass/chosen-themes.sass
+            @import themes/mytheme/theme.sass
