Adding 'watch:all' option

--- a/lib-docs/jade/docs/3.x/creating-extensions/index.jade
+++ b/lib-docs/jade/docs/3.x/creating-extensions/index.jade
@@ -325,4 +325,5 @@ block documents
         <span>
 
             // In lib-docs/sass/chosen-themes.sass
-            @import themes/mytheme/theme.sass
+            // We need to reach up a couple directories to get to our theme in lib.
+            @import ../../lib/sass/themes/mytheme/theme.sass
