--- a/lib-docs/jade/docs/3.x/creating-extensions/index.jade
+++ b/lib-docs/jade/docs/3.x/creating-extensions/index.jade
@@ -42,6 +42,8 @@ block documents
       :markdown
         ## Create a project to contain your extensions
 
+        <iframe width="420" height="315" src="//www.youtube.com/embed/Ork8Zk4IoF8?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+
         For your first extension, you're going to create two repositories. The
           first will be a project to contain all the extensions you build from now on.
           this is what we'll mean when we say "project" from here on.
