Adding more colorful labels

--- a/lib-docs/jade/docs/3.x/creating-extensions/index.jade
+++ b/lib-docs/jade/docs/3.x/creating-extensions/index.jade
@@ -122,7 +122,7 @@ block documents
         Create a new repo in GitHub and initiate with a README.md file. In this example,
         we'll say we created a repo called "status-text"
 
-        <span class="notice">Beware of extensionless files</span> Please
+        <span class="notice-error">Beware of extensionless files</span> Please
         avoid using files that do not have extensions. For example, `LICENSE`
         should be renamed to `LICENSE.md`. Extensionless files create issues 
         in your Rails end users
@@ -133,7 +133,7 @@ block documents
         Now that you have your `status-text` repo, you'll need to add it as a submodule
         in your project.
 
-        <span class="notice">Don't clone!</span> It's tempting to just `git clone` your repo, here,
+        <span class="notice-warning">Don't clone!</span> It's tempting to just `git clone` your repo, here,
         but you won't be able to maintain it as easily from within your project.
 
         You should then see this directory created alongside the `switch` extension.
