--- a/lib-docs/jade/docs/3.x/adding-extensions/index.jade
+++ b/lib-docs/jade/docs/3.x/adding-extensions/index.jade
@@ -250,7 +250,7 @@ block documents
   .document
     article.article.article-full
       p
-        span.notice Don't edit 3rd party themes
+        span.notice-warning Don't edit 3rd party themes
         |  As git submodules, there is significant risk that changes to a third-party
         | will be lost, both from your code and from your version control. It's much safer
         | to override the CSS rules in a separate file in your version control that comes 
