Fixing missing animation on grolw

--- a/lib-docs/jade/docs/3.x/adding-extensions/index.jade
+++ b/lib-docs/jade/docs/3.x/adding-extensions/index.jade
@@ -26,8 +26,8 @@ block documents
 
       p
         span.notice Rails users
-        |  Using third-party components/themes is optional, but you'll need to add the Rails shim to do
-        | so. See "Shimming rails" below before doing anything else.
+        |  Using third-party components/themes is optional, but you'll need to do a few things
+        | first. See "Shimming rails" below before doing anything else.
 
   .document
     article.article
